# ccodebase_intel_platform

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0001_placeholder.py  0002_source_files.py  0003_symbols.py  0004_symbol_metadata.py  0005_framework_imports.py  0006_symbol_calls.py  0007_symbol_relations.py  0008_chunks.py  0009_chunk_embeddings.py  0010_embedding_dimensions_1536.py  0011_index_pipeline_version.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: routes.py  v1.py
apps/api/app/core/: config.py  language_contract.py
apps/api/app/db/: deps.py  session.py
apps/api/app/models/: __init__.py  entities.py  job_stages.py  relation_kinds.py
apps/api/app/schemas/: __init__.py  ask.py  calls.py  chunks.py  files.py  graphs.py  implementations.py  jobs.py  relations.py  repositories.py  snapshots.py  symbols.py
apps/api/app/services/: __init__.py  calls_query.py  chunks_query.py  discovery.py  files_query.py  git_clone.py  github_url.py  graph_filters.py  graphs.py  hybrid_weight_eval.py  import_repository.py  incremental_index.py  index_pipeline.py  java_calls.py  java_framework.py  java_inheritance.py  java_parser.py  java_symbols.py  job_queue.py  jobs.py  js_ts_calls.py  js_ts_framework.py  js_ts_imports.py  js_ts_parser.py  js_ts_symbols.py  python_ast_parser.py  python_calls.py  python_framework.py  python_imports.py  relations_query.py  relationships.py  repository_summary.py  snapshot_validation.py  snapshots.py  source_files.py  symbols.py  symbols_query.py
apps/api/app/services/chunking/: __init__.py  config_chunking.py  deep_symbols.py  markdown_chunks.py  sql_chunks.py  treesitter_generic.py  types.py
apps/api/app/services/embeddings/: __init__.py  azure_openai.py  constants.py  factory.py  local_hash.py  null_provider.py  persist.py  provider.py
apps/api/app/services/llm/: __init__.py  azure_openai.py  budget.py  factory.py  null_provider.py  priority.py  provider.py  schemas.py  validation.py
apps/api/app/services/rag/: __init__.py  answer.py  ask_eval.py  ask_repo_budget.py  candidates.py  citations.py  context_expand.py  evidence_policy.py  pipeline.py  query_analysis.py  rerank.py  schemas.py
apps/api/scripts/: cleanup_test_repositories.py  entrypoint.sh  reindex_embeddings.py  run_ask_eval.py  run_hybrid_weight_eval.py  test_azure_chat.py  test_azure_embedding.py
apps/api/tests/: conftest.py  test_api_contract_matrix.py  test_api_filters_week04.py  test_ask_evidence_policy_week10.py  test_ask_invariants_parameterized.py  test_ask_rca_invariants.py  test_ask_repo_budget_week11.py  test_azure_embedding_smoke_opt_in.py  test_calls_api.py  test_cancel_reindex_week11.py  test_chunk_line_invariants_week10.py  test_chunking_week07.py  test_classification_matrix.py  test_concurrency_queue.py  test_config_docs_chunking.py  test_config_matrix.py  test_cors_and_errors.py  test_coverage_edges.py  test_db_constraints.py  test_discovery.py  test_discovery_contract.py  test_discovery_extended.py  test_discovery_perf.py  test_doc_contracts_week04.py  test_embeddings_persist_week09.py  test_embeddings_week09.py  test_files_api.py  test_git_clone.py  test_github_url.py  test_github_url_matrix.py  test_github_url_security_extended.py  test_health.py  test_hybrid_weight_eval_week09.py  test_import_api.py  test_import_service.py  test_incremental_index_week11.py  test_index_pipeline_version.py  test_java_architecture_calls.py  test_java_framework_inheritance.py  test_java_parser.py  (+51 more)
apps/api/tests/fixtures/: retail_retention_golden.json  retail_shape_golden.json
apps/api/tests/fixtures/ask_evidence_policy/: README.md  docker-compose.yml
apps/api/tests/fixtures/ask_evidence_policy/dashboard/: app.py
apps/api/tests/fixtures/ask_evidence_policy/dbt/: dbt_project.yml
apps/api/tests/fixtures/ask_evidence_policy/docs/: ARCHITECTURE.md  DAY1_CHECKLIST.md  FLAGSHIP_PLAN.md  WEEK1_PLAN.md  data_dictionary.md
apps/api/tests/fixtures/ask_exact_file/: README.md  package.json  vite.config.ts
apps/api/tests/fixtures/ask_onboarding_go/: README.md  go.mod
apps/api/tests/fixtures/ask_onboarding_node/: README.md  index.html  package.json  tsconfig.json
apps/api/tests/fixtures/generic_polyglot/: README.md  pom.xml
apps/api/tests/fixtures/graph_accuracy/: README.md
apps/api/tests/fixtures/hybrid_weight_eval/: queries.json
apps/api/tests/fixtures/java_deep/: Broken.java
apps/api/tests/fixtures/js_ts_deep/: tsconfig.json
apps/api/tests/fixtures/mixed_frontend_backend/: README.md
apps/api/tests/fixtures/retail_shape/: README.md
apps/api/tests/fixtures/spring_fixture/: README.md
apps/api/tests/helpers/: __init__.py  retail_fixture.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/worker/: __main__.py
(+192 files in other folders)
