[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeintel-api"
version = "0.1.0"
description = "Codebase Intelligence Platform API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.0",
  "tree-sitter>=0.23.0",
  "tree-sitter-javascript>=0.23.0",
  "tree-sitter-typescript>=0.23.0",
  "tree-sitter-java>=0.23.0",
  "tree-sitter-go>=0.23.0",
  "tree-sitter-rust>=0.23.0",
  "tree-sitter-c>=0.23.0",
  "tree-sitter-cpp>=0.23.0",
  "tree-sitter-c-sharp>=0.23.0",
  "tree-sitter-ruby>=0.23.0",
  "tree-sitter-bash>=0.23.0",
  "sqlglot>=25.0",
  "pyyaml>=6.0",
  "dockerfile-parse>=2.0",
  "mistune>=3.0",
  "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-randomly>=3.15.0",
  "pytest-xdist>=3.6.0",
  "hypothesis>=6.112.0",
  "httpx>=0.27.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "types-setuptools",
  "mutmut>=2.4.0",
  "watchfiles>=0.24.0",
]
# Optional enrichment stack — never required for CI or deterministic indexing.
llm = [
  "openai>=1.40.0",
  "langchain-openai>=0.2.0",
  "langchain-core>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Intentional syntax-error / sample trees used by golden tests — not lint targets.
exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]

# Optional [llm] extra is not installed in CI; keep those imports soft for typecheck.
[[tool.mypy.overrides]]
module = [
  "openai",
  "openai.*",
  "langchain_openai",
  "langchain_openai.*",
  "langchain_core",
  "langchain_core.*",
]
ignore_missing_imports = true

# Third-party packages without reliable stubs in the default CI install.
[[tool.mypy.overrides]]
module = [
  "yaml",
  "yaml.*",
  "defusedxml",
  "defusedxml.*",
  "dockerfile_parse",
  "dockerfile_parse.*",
  "sqlglot",
  "sqlglot.*",
]
ignore_missing_imports = true

# sqlglot.tokens.TokenType is runtime-exported but not in the stub __all__.
[[tool.mypy.overrides]]
module = "app.services.chunking.sql_chunks"
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "slow: performance smoke or long-running tests",
  "integration: requires PostgreSQL or multi-component wiring",
  "xdist_group: serialize related tests under pytest-xdist loadgroup",
  "network: may clone or fetch external fixtures once into .cache",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
  "app/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.mutmut]
source_paths = ["app"]
runner = "python -m pytest -q"
debug = false
pytest_add_cli_args_test_selection = [
  "tests/test_github_url.py",
  "tests/test_github_url_matrix.py",
  "tests/test_github_url_security_extended.py",
  "tests/test_language_contract.py",
  "tests/test_python_framework_matrix.py",
  "tests/test_python_calls_matrix.py",
]

