[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeintel-worker"
version = "0.1.0"
description = "Codebase Intelligence Platform background worker"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0.36",
  "pydantic-settings>=2.6.0",
  "psycopg[binary]>=3.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["worker"]
